

  ChangeLog.txt for libSUFR
  
     
   42: 18/04/2011:
     - system: Added routines warn() and error() to print standardised warnings and errors
     
   41: 17/04/2011:
     - system: added quit_program_warning() and quit_program_error() to generate 
       standardized warnings and errors, and allow non-zero exit codes
     - constants: added semi-major axes of planets
   
   40: 06/04/2011:  ** SF release 0.1.6 **
     - Added routine wass() to angle2string.f90 - it returns an angle in " in HTML
     - 4419 lines of code
     
   39: 06/04/2011:
     - Bugfix:  fixed factor of pi in definitions of r2as and as2r
     - longer strings for homedir, workdir, program_path, program_args
     
   38: 03/04/2011:
     - fixed bug in use of dow_ut() for currentdate string
     - fixed implicit conversions - code compiles with gfortran-4.6
   
   37: 25/03/2011:  *** SF release 0.1.5 ***
     - 4391 lines of code
     - fixed CREATE_SHAREDLIB, CREATE_STATICLIB issue (WANT_STATIC already existed)
     
   36: 25/03/2011:
     - Update CMake: 
       - make shared/static libraries optional
              
   35: 25/03/2011:
     - Added source files with code from TheSky, textfunctions.f90:
       - angle2string.f90:  convert angles to formatted strings
       - time2string.f90:   convert times to formatted strings
     - Use with TheSky rev.218
       
   34: 23/03/2011:
     - Updated CMake files, make
     
   33: 22/03/2011:  *** SF release 0.1.4 ***
     - 2587 lines of code
   
   32: 22/03/2011:
     - Critical bugfix: 
       dow() was still called within libSUFR - hence the library couldn't link to
       programs other than TheSky (which has its own dow()).
     - Updated doc/make
     
   31: 12/03/2011:  *** SF release 0.1.3 ***
     - Make gfortran compiler flags compatible with v.4.4
     - Adapted comments
     - 2588 lines of code
   
   30: 12/03/2011:
     - Added text.f90, with lowercase(), uppercase(), uppercaseinitial() from TheSky